--- a/cookbooks/sensu/templates/default/check-cron.json.erb
+++ b/cookbooks/sensu/templates/default/check-cron.json.erb
@@ -4,6 +4,7 @@
       "handlers": ["librato", "irc"],
       "command": "/usr/local/etc/sensu/plugins/check-procs.rb -p cron -C 1 -c 10 -w 5",
       "interval": 60,
+      "refresh": 300,
       "subscribers": [ "servers" ]
     }
   }
