--- a/cookbooks/sensu/templates/default/check-dovecot.json.erb
+++ b/cookbooks/sensu/templates/default/check-dovecot.json.erb
@@ -2,7 +2,7 @@
   "checks": {
     "dovecot_check": {
       "handlers": ["librato", "irc"],
-      "command": "/usr/local/etc/sensu/plugins/check-procs.rb -p dovecot -C 1",
+      "command": "/usr/local/etc/sensu/plugins/check-procs.rb -p sbin/dovecot -C 1",
       "interval": 60,
       "refresh": 300,
       "subscribers": [ "imapserver" ]
