--- a/cookbooks/sensu/templates/default/check-sendmail.json.erb
+++ b/cookbooks/sensu/templates/default/check-sendmail.json.erb
@@ -1,7 +1,7 @@
 {
   "checks": {
     "sendmail_check": {
-      "handlers": ["librato", "irc"],
+      "handlers": ["librato", "irc", "mail"],
       "command": "/usr/local/etc/sensu/plugins/check-procs.rb -p sendmail -C 1 -W 2 -c 10 -w 8",
       "interval": 60,
       "refresh": 300,
