add irc bouncer chef stuff

--- a/cookbooks/homedirs/templates/default/mrtazz/znc.conf.erb
+++ b/cookbooks/homedirs/templates/default/mrtazz/znc.conf.erb
@@ -44,7 +44,6 @@ LoadModule   = webadmin
 	LoadModule = push
 	LoadModule = keepnick
 	LoadModule = nickserv
-	LoadModule = log
 
 	Server = irc.freenode.org 6667
 
@@ -52,6 +51,9 @@ LoadModule   = webadmin
 	</Chan>
 
 	<Chan ##monitoringsucks>
+	</Chan>
+
+	<Chan ##monitoringlove>
 	</Chan>
 
 	<Chan #chef>
