--- a/cookbooks/sensu/templates/default/check-znc.json.erb
+++ b/cookbooks/sensu/templates/default/check-znc.json.erb
@@ -2,10 +2,10 @@
   "checks": {
     "znc_check": {
       "handlers": ["librato", "irc", "mail"],
-      "command": "/usr/local/etc/sensu/plugins/check-procs.rb -p znc -C 1 -W 2 -c 10 -w 8",
+      "command": "/usr/local/etc/sensu/plugins/check-procs.rb -p znc -C 1",
       "interval": 60,
       "refresh": 300,
-      "subscribers": [ "servers" ]
+      "subscribers": [ "servers", "ircbouncer" ]
     }
   }
 }
