--- a/cookbooks/apache/templates/default/httpd-ssl.conf.erb
+++ b/cookbooks/apache/templates/default/httpd-ssl.conf.erb
@@ -1,12 +1,12 @@
 #
 # This is the Apache server configuration file providing SSL support.
 # It contains the configuration directives to instruct the server how to
-# serve pages over an https connection. For detailing information about these 
+# serve pages over an https connection. For detailing information about these
 # directives see <URL:http://httpd.apache.org/docs/2.2/mod/mod_ssl.html>
-# 
+#
 # Do NOT simply read the instructions in here without understanding
 # what they do.  They're here only as hints or reminders.  If you are unsure
-# consult the online docs. You have been warned.  
+# consult the online docs. You have been warned.
 #
 
 #
@@ -28,12 +28,13 @@
 
 
 #
-# When we also provide SSL we have to listen to the 
+# When we also provide SSL we have to listen to the
 # standard HTTP port (see above) and to the HTTPS port
 #
 # Note: Configurations that use IPv6 but not IPv4-mapped addresses need two
 #       Listen directives: "Listen [::]:443" and "Listen 0.0.0.0:443"
 #
+NameVirtualHost *:443
 Listen 443
 
 ##
@@ -56,7 +57,7 @@ AddType application/x-pkcs7-crl    .crl
 SSLPassPhraseDialog  builtin
 
 #   Inter-Process Session Cache:
-#   Configure the SSL Session Cache: First the mechanism 
+#   Configure the SSL Session Cache: First the mechanism
 #   to use and second the expiring timeout (in seconds).
 #SSLSessionCache         "dbm:/var/run/ssl_scache"
 SSLSessionCache        "shmcb:/var/run/ssl_scache(512000)"
@@ -64,7 +65,7 @@ SSLSessionCacheTimeout  300
 
 #   Semaphore:
 #   Configure the path to the mutual exclusion semaphore the
-#   SSL engine uses internally for inter-process synchronization. 
+#   SSL engine uses internally for inter-process synchronization.
 SSLMutex  "file:/var/run/ssl_mutex"
 
 ##
@@ -105,8 +106,8 @@ SSLMutex  "file:/var/run/ssl_mutex"
 ##   compromised, captures of past or future traffic must be
 ##   considered compromised, too.
 ##SSLCipherSuite RC4-SHA:AES128-SHA:HIGH:MEDIUM:!aNULL:!MD5
-##SSLHonorCipherOrder on 
-# 
+##SSLHonorCipherOrder on
+#
 ##   Server Certificate:
 ##   Point SSLCertificateFile at a PEM encoded certificate.  If
 ##   the certificate is encrypted, then you will be prompted for a
@@ -203,7 +204,7 @@ SSLMutex  "file:/var/run/ssl_mutex"
 ##     and no other module can change it.
 ##   o OptRenegotiate:
 ##     This enables optimized SSL connection renegotiation handling when SSL
-##     directives are used in per-directory context. 
+##     directives are used in per-directory context.
 ##SSLOptions +FakeBasicAuth +ExportCertData +StrictRequire
 #<FilesMatch "\.(cgi|shtml|phtml|php)$">
 #    SSLOptions +StdEnvVars
@@ -229,7 +230,7 @@ SSLMutex  "file:/var/run/ssl_mutex"
 ##     alert of the client. This is 100% SSL/TLS standard compliant, but in
 ##     practice often causes hanging connections with brain-dead browsers. Use
 ##     this only for browsers where you know that their SSL implementation
-##     works correctly. 
+##     works correctly.
 ##   Notice: Most problems of broken clients are also related to the HTTP
 ##   keep-alive facility, so you usually additionally want to disable
 ##   keep-alive for those clients, too. Use variable "nokeepalive" for this.
@@ -246,4 +247,4 @@ SSLMutex  "file:/var/run/ssl_mutex"
 #CustomLog "/var/log/httpd-ssl_request.log" \
 #          "%t %h %{SSL_PROTOCOL}x %{SSL_CIPHER}x \"%r\" %b"
 #
-#</VirtualHost>                                  
+#</VirtualHost>
