--- a/cookbooks/apache/templates/default/httpd.conf.erb
+++ b/cookbooks/apache/templates/default/httpd.conf.erb
@@ -38,6 +38,7 @@ ServerRoot "/usr/local"
 # prevent Apache from glomming onto all bound IP addresses.
 #
 #Listen 12.34.56.78:80
+NameVirtualHost *:80
 Listen 80
 
 #
@@ -103,6 +104,12 @@ LoadModule speling_module libexec/apache22/mod_speling.so
 LoadModule userdir_module libexec/apache22/mod_userdir.so
 LoadModule alias_module libexec/apache22/mod_alias.so
 LoadModule rewrite_module libexec/apache22/mod_rewrite.so
+<% if node.recipe? "php" %>
+LoadModule php5_module        libexec/apache22/libphp5.so
+DirectoryIndex index.php index.html
+AddType application/x-httpd-php .php
+AddType application/x-httpd-php-source .phps
+<% end %>
 
 <IfModule !mpm_netware_module>
 <IfModule !mpm_winnt_module>
