add palaver znc module and don't send email to me.com from non public hosts

--- a/cookbooks/homedirs/templates/default/mrtazz/forward.erb
+++ b/cookbooks/homedirs/templates/default/mrtazz/forward.erb
@@ -1,5 +1,7 @@
 <% if node.role? "mailserver" %>
 "|exec /usr/local/bin/procmail || exit 75"
+<% elsif node[:ip_address] != node[:public_ip] %>
+d@lordofhosts.de
 <% else %>
 mrtazz@me.com
 <% end %>
