--- a/cookbooks/nagios/templates/default/contacts.cfg.erb
+++ b/cookbooks/nagios/templates/default/contacts.cfg.erb
@@ -24,5 +24,5 @@ define contact{
 define contactgroup{
         contactgroup_name       admins
         alias                   Nagios Administrators
-        members                 mrtazz,mrtazz_pushover,opsgenie
+        members                 mrtazz,mrtazz_pushover
         }
