remove cram-md5 from dovecot auth methods

--- a/cookbooks/dovecot/templates/default/dovecot.conf.erb
+++ b/cookbooks/dovecot/templates/default/dovecot.conf.erb
@@ -1,6 +1,6 @@
 # 2.0.16: /usr/local/etc/dovecot/dovecot.conf
-# OS: FreeBSD 9.0-RELEASE amd64  
-auth_mechanisms = plain login digest-md5 cram-md5
+# OS: FreeBSD 9.0-RELEASE amd64
+auth_mechanisms = plain login digest-md5
 auth_username_format = %Lu
 disable_plaintext_auth = no
 first_valid_gid = 1000
