--- a/cookbooks/apache/templates/default/graphite.conf.erb
+++ b/cookbooks/apache/templates/default/graphite.conf.erb
@@ -10,8 +10,9 @@ WSGISocketPrefix /var/run/wsgi
   ServerName <%= @hostname %>
   ServerAlias <%= node[:fqdn] %>
   SSLEngine On
-  SSLCertificateFile "/usr/local/etc/apache22/ssl.cert"
-  SSLCertificateKeyFile "/usr/local/etc/apache22/ssl.key"
+  SSLCertificateFile "/usr/local/ssl/star.unwiredcouch.com.cert"
+  SSLCertificateKeyFile "/usr/local/ssl/star.unwiredcouch.com.key"
+  SSLCertificateChainFile "/usr/local/ssl/intermediate.cert"
   ErrorLog /var/log/httpd/<%= @hostname %>-error.log
   CustomLog /var/log/httpd/<%= @hostname %>-access.log common
   DocumentRoot "<%= @graphite_root %>"
