use wildcard cert for nagios installation

--- a/cookbooks/nagios/templates/default/nagios_apache.conf.erb
+++ b/cookbooks/nagios/templates/default/nagios_apache.conf.erb
@@ -1,8 +1,10 @@
 <VirtualHost *:443>
     ServerName nagios.unwiredcouch.com
     SSLEngine On
-    SSLCertificateFile "/usr/local/etc/apache22/ssl.cert"
-    SSLCertificateKeyFile "/usr/local/etc/apache22/ssl.key"
+
+    SSLCertificateFile "/usr/local/ssl/star.unwiredcouch.com.cert"
+    SSLCertificateKeyFile "/usr/local/ssl/star.unwiredcouch.com.key"
+    SSLCertificateChainFile "/usr/local/ssl/intermediate.cert"
 
     DocumentRoot /usr/local/www/nagios
     <Directory /usr/local/www/nagios>
