allow nagios to check for freebsd updates

--- a/cookbooks/sudo/templates/default/sudoers.erb
+++ b/cookbooks/sudo/templates/default/sudoers.erb
@@ -2,4 +2,4 @@
 ## User privilege specification
 ##
 root ALL=(ALL) ALL
-nagios ALL=(ALL) NOPASSWD:/usr/local/libexec/nagios/check_smartmon
+nagios ALL=(ALL) NOPASSWD:/usr/local/libexec/nagios/check_smartmon, /usr/local/nagios/plugins/check_freebsd_update.sh
