load interfaces plugin for collectd

--- a/cookbooks/collectd/templates/default/collectd.conf.erb
+++ b/cookbooks/collectd/templates/default/collectd.conf.erb
@@ -28,6 +28,7 @@ LoadPlugin cpu
 LoadPlugin memory
 LoadPlugin uptime
 LoadPlugin df
+LoadPlugin interface
 <% if @has_apache %>
 LoadPlugin "apache"
 <% end %>
