--- a/cookbooks/apache/templates/default/status.conf.erb
+++ b/cookbooks/apache/templates/default/status.conf.erb
@@ -6,14 +6,13 @@ ExtendedStatus On
         SetHandler server-status
         Order deny,allow
         Deny from all
-        Allow from 127.0.0.1
+        Allow from 127.0.0.1 <%= node[:ipaddress] %>
     </Location>
-
 
     <Location /server-info>
         SetHandler server-info
         Order deny,allow
         Deny from all
-        Allow from 127.0.0.1
+        Allow from 127.0.0.1 <%= node[:ipaddress] %>
     </Location>
 </VirtualHost>
