update apache cookbook

--- a/cookbooks/apache/templates/default/apache24/httpd.conf.erb
+++ b/cookbooks/apache/templates/default/apache24/httpd.conf.erb
@@ -454,7 +454,7 @@ LogLevel warn
 # necessary.
 
 # Server-pool management (MPM specific)
-#Include etc/apache24/extra/httpd-mpm.conf
+Include etc/apache24/extra/httpd-mpm.conf
 
 # Multi-language error messages
 #Include etc/apache24/extra/httpd-multilang-errordoc.conf
