sshd can listen on localhost, that's fine

--- a/cookbooks/security/templates/default/sshd_config.erb
+++ b/cookbooks/security/templates/default/sshd_config.erb
@@ -19,6 +19,7 @@
 #Port 22
 #AddressFamily any
 #ListenAddress 0.0.0.0
+ListenAddress 127.0.0.1
 ListenAddress <%= node[:ipaddress] %>
 #ListenAddress ::
 
