--- a/cookbooks/nagios/templates/default/nrpe.cfg.erb
+++ b/cookbooks/nagios/templates/default/nrpe.cfg.erb
@@ -229,7 +229,7 @@ command[check_smartmon]=/usr/local/nagios/plugins/check_smartmon.sh
 command[check_saslauthd]=/usr/local/libexec/nagios/check_procs -C saslauthd
 
 <% @checks.each do |check| %>
-  <% sudo = check[:run_with_sudo] ? "sudo " : "" %>
+  <% sudo = check[:run_with_sudo] ? "/usr/local/bin/sudo " : "" %>
   <% cmd = "#{sudo}#{@plugindir}/#{check[:script]}" %>
 command[<%= check[:name] %>]=<%= cmd %>
 <% end %>
