generate additional metrics for yagd from node attributes

--- a/cookbooks/apache/templates/default/yagd.config.php.erb
+++ b/cookbooks/apache/templates/default/yagd.config.php.erb
@@ -15,6 +15,15 @@ $CONFIG = array(
          "apache" => <%= host[:apache] %>,
          "interfaces" => <%= host[:interfaces].to_json %>,
          "filesystems" => <%= host[:filesystems].to_json %>,
+         "additional_metrics" => [
+           <% host[:additional_metrics].each do |name,values| %>
+           "<%= name %>" => [
+             <% values.each do |title,metric| %>
+               "<%= title %>" => "<%= metric %>",
+             <% end %>
+           ],
+           <% end %>
+         ]
        ),
     <% end %>
     )
