add custom temperature types to collectd

--- a/cookbooks/collectd/templates/default/custom_types.db.erb
+++ b/cookbooks/collectd/templates/default/custom_types.db.erb
@@ -4,3 +4,8 @@ bytes                   rx:DERIVE:0:U, tx:DERIVE:0:U
 messages_rejected       value:DERIVE:0:U
 messages_discarded      value:DERIVE:0:U
 messages_quarantined    value:DERIVE:0:U
+
+# temperature measurements
+celsius_curren          value:GAUGE:-20:100
+celsius_min             value:GAUGE:-20:100
+celsius_max             value:GAUGE:-20:100
